# PolygonClip

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/include/: polygon_clip.hpp
lib/src/: polygon_clip.cc  polygon_clip_math.cc  polygon_clip_math.hpp  polygon_clip_priv.cc  polygon_clip_priv.hpp
sandbox/: CMakeLists.txt  clip_example.cc  example.cc  example.hpp  union_example.cc
